# CompilerTest

./: build.ps1  build.sh  generatecode.ps1  generatecppcode.ps1  generateheadercode.ps1  runcmake.ps1  runcmake.sh
CppCompilationTest/: CMakeLists.txt
CppCompilationTest/src/: file1.cpp  file1.h  file2.cpp  file2.h  file3.cpp  file3.h  file4.cpp  file4.h  file5.cpp  file5.h  main.cpp
